--- a/index.html
+++ b/index.html
@@ -43,39 +43,57 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Agile software development</td>
+                        <td><a href="https://courses.cs.ut.ee/2019/asd/fall" target="_blank">Agile software development</a></td>
                         <td>1</td>
                         <td>82</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>System modeling</td>
+                        <td><a href="https://courses.cs.ut.ee/2019/SM/fall" target="_blank">Systems modeling</a></td>
                         <td>1</td>
                         <td>85</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Object-oriented programming</td>
+                        <td><a href="https://courses.cs.ut.ee/2019/OOP/spring" target="_blank">Object-oriented programming</a></td>
                         <td>2</td>
                         <td>99</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Estonian language Level A2</td>
+                        <td><a href="https://courses.cs.ut.ee/2019/algorithmics/fall" target="_blank">Estonian language Level A2</a></td>
                         <td>2</td>
                         <td>65</td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    <tr>
+                        <td>599</td>
+                        <td>numbrid</td>
+                        <td>2</td>
+                        <td>65</td>
+                    </tr>
+                </tfoot>
             </table>
         </section>
+        
+        <br><br>
+        <section>
+            <p>Lisa kursusi!</p>
+            <form>
+                <input type="text">
+                <input type="submit">
+            </form>
+        </section>
+        <br>
         
         <footer>
             <ul>
                 <li>
-                    <a href="https://ois2.ut.ee/">OIS</a>
+                    <a href="https://ois2.ut.ee/" target="_blank">>OIS</a>
                 </li>
                 <li>
-                    <a href="https://courses.cs.ut.ee/">Courses</a>
+                    <a href="https://courses.cs.ut.ee/" target="_blank">>Courses</a>
                 </li>
             </ul>
         </footer>
